--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Contact</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../fontes/poppins.css" />
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Form Contact</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../fontes/poppins.css" />
+</head>
+
+<body>
   <section>
     <div class="container">
       <div class="contact_info">
@@ -17,42 +18,39 @@
           <ul class="info">
             <li>
               <span><img src="img/location.svg" alt="location" /></span>
-              <span
-                >Ruas dos bobos nro.: 0 <br />Los Angeles, CA <br />
-                25645-897</span
-              >
+              <span>Ruas dos bobos nro.: 0 <br />Los Angeles, CA <br /> 25645-897</span>
             </li>
             <li>
-              <span><img src="img/location.svg" alt="location" /></span>
-              <span
-                >Ruas dos bobos nro.: 0 <br />Los Angeles, CA <br />
-                25645-897</span
-              >
+              <span><img src="img/send.svg" alt="send" /></span>
+              <span>cicero.dsantos@outlook.com.br</span>
             </li>
             <li>
-              <span><img src="img/contact-book.svg" alt="location" /></span>
+              <span><img src="img/phone.svg" alt="phone" /></span>
               <span>+52 25 632-254</span>
             </li>
           </ul>
+          
           <ul class="sci">
             <li>
-              <a href="http://"><img src="img/ex.svg" alt="" srcset="" /></a>
+              <a href="http://"><img src="img/linkedin.svg" alt="linkedin" srcset="" /></a>
             </li>
             <li>
-              <a href="http://"><img src="img/ex.svg" alt="" srcset="" /></a>
+              <a href="http://"><img src="img/twitter.svg" alt="twitter" srcset="" /></a>
             </li>
             <li>
-              <a href="http://"><img src="img/ex.svg" alt="" srcset="" /></a>
+              <a href="http://"><img src="img/facebook.svg" alt="facebook" srcset="" /></a>
             </li>
             <li>
-              <a href="http://"><img src="img/ex.svg" alt="" srcset="" /></a>
+              <a href="http://"><img src="img/instagram.svg" alt="" instagram srcset="" /></a>
             </li>
             <li>
-              <a href="http://"><img src="img/ex.svg" alt="" srcset="" /></a>
+              <a href="http://"><img src="img/telegram.svg" alt="telegram" srcset="" /></a>
             </li>
           </ul>
+
         </div>
       </div>
+
       <div class="contact_form">
         <h2>Envie uma mensagem</h2>
         <div class="form_box">
@@ -81,9 +79,11 @@
           </div>
         </div>
       </div>
+
     </div>
 
   </section>
-    </body>
-  </body>
+</body>
+</body>
+
 </html>
